--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1257,6 +1257,10 @@ section.lazy-placeholder:after {
 .cid-rVvcHYkoHn .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
+.cid-rVvcHYkoHn .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-rVvcHYkoHn .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
 .cid-rVvcHYkoHn .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-rVvcHYkoHn .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -1357,6 +1361,10 @@ section.lazy-placeholder:after {
   .cid-rVvcHYkoHn .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-rVvcHYkoHn .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
+  }
+  .cid-rVvcHYkoHn .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-rVvcHYkoHn .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
   }
   .cid-rVvcHYkoHn .navbar-collapse.collapsing .navbar-buttons,
   .cid-rVvcHYkoHn .navbar-collapse.show .navbar-buttons {
